--- a/CoffyWebUI/Views/ProgressBars/Index.cshtml
+++ b/CoffyWebUI/Views/ProgressBars/Index.cshtml
@@ -34,7 +34,85 @@
 				connection.on("ReceiveMenuTableCount", (value3) => {
 					$("#menutablecount").text(value3);
 				});
-				
+				connection.on("ReceiveMenuTableCount", (value4) => {
+					$("#totalMenuTableCountProgress").empty();
+					$("#totalMenuTableCountProgress").append(`
+						<div class="d-flex justify-content-between mb-1">
+								<span class="text-muted">Toplam Masa Sayısı</span>
+								<span class="text-muted fw-bold"> ${value4}
+								</span>
+						</div>
+						<div class="progress mb-2" style="height: 7px;">
+							<div class="progress-bar bg-success" role="progressbar" style="width: ${value4}%" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="${value4}%"></div>
+						</div>
+					`)
+				});
+				connection.on("ReceiveProductPriceAvg", (value5) => {
+					$("#ReceiveProductPriceAvgProgress").empty();
+					$("#ReceiveProductPriceAvgProgress").append(`
+						<div class="d-flex justify-content-between mb-1">
+						<span class="text-muted">Ortalama Ürün Fiyatı</span>
+						<span class="text-muted fw-bold">${value5}</span>
+						</div>
+						<div class="progress mb-2" style="height: 7px;">
+						<div class="progress-bar bg-info" role="progressbar" style="width: ${value5}%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="${value5}%"></div>
+						</div>
+				`)
+				});
+				connection.on("ReceiveAvgPriceByMakarna", (value6) => {
+					$("#ReceiveAvgPriceByMakarnaProgress").empty();
+					$("#ReceiveAvgPriceByMakarnaProgress").append(`
+						<div class="d-flex justify-content-between mb-1">
+						<span class="text-muted">Ortalama Makarna Fiyatı</span>
+						<span class="text-muted fw-bold">${value6}</span>
+						</div>
+						<div class="progress mb-2" style="height: 7px;">
+						<div class="progress-bar bg-primary" role="progressbar" style="width: ${value6}%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="${value6}%"></div>
+						</div>
+				`)
+				});
+				connection.on("ReceiveCountByCategoryNameDrink", (value7) => {
+					$("#ReceiveCountByCategoryNameDrinkProgress").empty();
+					$("#ReceiveCountByCategoryNameDrinkProgress").append(`
+						<div class="d-flex justify-content-between mb-1">
+						<span class="text-muted">Kahve Çeşidi</span>
+						<span class="text-muted fw-bold">${value7}</span>
+						</div>
+						<div class="progress mb-2" style="height: 7px;">
+						<div class="progress-bar bg-success" role="progressbar" style="width: ${value7}%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="${value7}%"></div>
+						</div>
+				`)
+				});
+				connection.on("ReceiveTotalOrderCount", (value8) => {
+					$("#ReceiveTotalOrderCountProgress").empty();
+					$("#ReceiveTotalOrderCountProgress").append(`
+						<div class="d-flex justify-content-between mb-1">
+						<span class="text-muted">Toplam Sipariş Sayısı</span>
+						<span class="text-muted fw-bold">${value8}</span>
+						</div>
+						<div class="progress mb-2" style="height: 7px;">
+						<div class="progress-bar bg-primary" role="progressbar" style="width: ${value8}%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="${value8}%"></div>
+						</div>
+				`)
+				});
+
+
+				//
+				connection.on("ReceiveStaticValue1", (value9) => {
+					$("#ReceiveStaticValue1Progress").empty();
+					$("#ReceiveStaticValue1Progress").append(`
+						<div class="d-flex justify-content-between mb-1">
+						<span class="text-muted">Ortalama kahve Fiyatı</span>
+						<span class="text-muted fw-bold">${value9}</span>
+						</div>
+						<div class="progress mb-2" style="height: 7px;">
+						<div class="progress-bar bg-primary" role="progressbar" style="width: ${value9}%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="${value9}%"></div>
+						</div>
+				`)
+				});
+
+
+
 			});
 		</script>
 
@@ -46,8 +124,18 @@
 					<div class="col-md-4">
 						<div class="card">
 							<div class="card-body">
-								<p class="fw-bold mt-1">Kasadaki Toplam Tutar</p>
+								<<p class="fw-bold mt-1">Kasadaki Toplam Tutar</p>
 								<h4 id="totalmoneycaseamount"><b></b></h4>
+								<hr />
+								<p class="fw-bold mt-1">Toplam Ürün Fiyatları</p>
+								<h4>1465.78₺</h4>
+								<hr />
+								<p class="fw-bold mt-1">Ortalama Ürün Fiyatı</p>
+								<h4>48.65₺</h4>
+								<hr />
+								<p class="fw-bold mt-1">Son Sipariş Tutarı</p>
+								<h4>264.00₺</h4>
+
 								<a href="/Order/CreateOrder/" class="btn btn-primary btn-full text-left mt-3 mb-3"><i class="la la-plus"></i> Yeni Sipariş</a>
 							</div>
 							<div class="card-footer">
@@ -61,87 +149,25 @@
 					<div class="col-md-5">
 						<div class="card">
 							<div class="card-body">
-								<div class="progress-card">
-									<div class="d-flex justify-content-between mb-1">
-										<span class="text-muted">Profit</span>
-										<span class="text-muted fw-bold"> $3K</span>
-									</div>
-									<div class="progress mb-2" style="height: 7px;">
-										<div class="progress-bar bg-success" role="progressbar" style="width: 78%" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="78%"></div>
-									</div>
+
+								<div class="progress-card" id="totalMenuTableCountProgress">
 								</div>
-								<div class="progress-card">
-									<div class="d-flex justify-content-between mb-1">
-										<span class="text-muted">Orders</span>
-										<span class="text-muted fw-bold"> 576</span>
-									</div>
-									<div class="progress mb-2" style="height: 7px;">
-										<div class="progress-bar bg-info" role="progressbar" style="width: 65%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="65%"></div>
-									</div>
+
+								<div class="progress-card" id="ReceiveProductPriceAvgProgress">
 								</div>
-								<div class="progress-card">
-									<div class="d-flex justify-content-between mb-1">
-										<span class="text-muted">Tasks Complete</span>
-										<span class="text-muted fw-bold"> 70%</span>
-									</div>
-									<div class="progress mb-2" style="height: 7px;">
-										<div class="progress-bar bg-primary" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="70%"></div>
-									</div>
+
+								<div class="progress-card" id="ReceiveAvgPriceByMakarnaProgress">	
 								</div>
-								<div class="progress-card">
-									<div class="d-flex justify-content-between mb-1">
-										<span class="text-muted">Open Rate</span>
-										<span class="text-muted fw-bold"> 60%</span>
-									</div>
-									<div class="progress mb-2" style="height: 7px;">
-										<div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="60%"></div>
-									</div>
+
+								<div class="progress-card" id="ReceiveCountByCategoryNameDrinkProgress">	
 								</div>
-								<div class="progress-card">
-									<div class="d-flex justify-content-between mb-1">
-										<span class="text-muted">Open Rate</span>
-										<span class="text-muted fw-bold"> 60%</span>
-									</div>
-									<div class="progress mb-2" style="height: 7px;">
-										<div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="60%"></div>
-									</div>
+
+								<div class="progress-card" id="ReceiveTotalOrderCountProgress">
 								</div>
-								<div class="progress-card">
-									<div class="d-flex justify-content-between mb-1">
-										<span class="text-muted">Open Rate</span>
-										<span class="text-muted fw-bold"> 60%</span>
-									</div>
-									<div class="progress mb-2" style="height: 7px;">
-										<div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="60%"></div>
-									</div>
+
+								<div class="progress-card" id="ReceiveStaticValue1Progress">
 								</div>
-								<div class="progress-card">
-									<div class="d-flex justify-content-between mb-1">
-										<span class="text-muted">Open Rate</span>
-										<span class="text-muted fw-bold"> 60%</span>
-									</div>
-									<div class="progress mb-2" style="height: 7px;">
-										<div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="60%"></div>
-									</div>
-								</div>
-								<div class="progress-card">
-									<div class="d-flex justify-content-between mb-1">
-										<span class="text-muted">Open Rate</span>
-										<span class="text-muted fw-bold"> 60%</span>
-									</div>
-									<div class="progress mb-2" style="height: 7px;">
-										<div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="60%"></div>
-									</div>
-								</div>
-								<div class="progress-card">
-									<div class="d-flex justify-content-between mb-1">
-										<span class="text-muted">Open Rate</span>
-										<span class="text-muted fw-bold"> 60%</span>
-									</div>
-									<div class="progress mb-2" style="height: 7px;">
-										<div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="60%"></div>
-									</div>
-								</div>
+
 							</div>
 						</div>
 					</div>
@@ -173,6 +199,48 @@
 										<div class="numbers">
 											<p class="card-category">Masa Sayısı</p>
 											<h4 class="card-title" id="menutablecount"></h4>
+										</div>
+									</div>
+								</div>
+								<hr />
+								<div class="row">
+									<div class="col-5">
+										<div class="icon-big text-center">
+											<i class="la la-car text-success"></i>
+										</div>
+									</div>
+									<div class="col-7 d-flex align-items-center">
+										<div class="numbers">
+											<p class="card-category">Kategori Sayısı</p>
+											<h4 class="card-title" >15</h4>
+										</div>
+									</div>
+								</div>
+								<hr />
+								<div class="row">
+									<div class="col-5">
+										<div class="icon-big text-center">
+											<i class="la la-dribbble text-danger"></i>
+										</div>
+									</div>
+									<div class="col-7 d-flex align-items-center">
+										<div class="numbers">
+											<p class="card-category">Ürün Sayısı</p>
+											<h4 class="card-title" >25</h4>
+										</div>
+									</div>
+								</div>
+								<hr />
+								<div class="row">
+									<div class="col-5">
+										<div class="icon-big text-center">
+											<i class="la la-glass text-dark"></i>
+										</div>
+									</div>
+									<div class="col-7 d-flex align-items-center">
+										<div class="numbers">
+											<p class="card-category">Rezervasyon Sayısı</p>
+											<h4 class="card-title" >80</h4>
 										</div>
 									</div>
 								</div>
